# RAG_Knowladgebase_ChatBot

./: README.md  main.py  pyproject.toml
notebook/: document.ipynb  pdf_loader.ipynb
